--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,7 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/pilot/programmer"/>
-        <property name="context-root" value="PdfBoxServer"/>
         <property name="java-output-path" value="/JerseyFileService/target/classes"/>
+        <property name="context-root" value="JerseyFileService"/>
     </wb-module>
 </project-modules>
